feat: base project to start

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-el inicio
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main-styles.css">
+    <title>Trust Hotels - Gestión de Cadena Hotelera</title>
+</head>
+<body>
+    <nav id="nav-bar">
+        <a href="#">Inicio</a>
+        <a href="#">Hoteles</a>
+        <a href="#">Empleados</a>
+        <a href="#">Clientes</a>
+        <a href="#">Habitaciones </a>
+    </nav>
+    <main id="main-content">
+
+    </main>
+    <footer id="footer">
+        <p>&copy; 2025 Gestión de Cadena Hotelera</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
